# 2026-tgam-bocspeeches

./: .gitignore  METHODOLOGY.md  analysis.ipynb  build_tournament.py  pyproject.toml  score_speeches.py  scrape_speeches.py
docs/: data.json  index.html
docs/plans/: 2026-03-05-bocspeeches-design.md  2026-03-05-bocspeeches-implementation.md
